--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
-# Configuração do H2
+# H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Configuração do datasource
+# Datasource
 spring.datasource.url=jdbc:h2:mem:remessadb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
